--- a/styles/style.css
+++ b/styles/style.css
@@ -46,3 +46,23 @@ h1{
   padding-top: 50px;
 }
 
+.timeline{
+  position: relative;
+  max-width: 1200px;
+  margin: 100px auto;
+}
+
+.container{
+  padding: 10px 50px;
+  position: relative;
+  width: 50%;
+  background: rgba(0,0,0,0.3);
+}
+
+.text-box{
+  padding: 20px 30px;
+  background: #A5C9CA;
+  position: relative;
+  border-radius: 6px;
+  font-size: 15px;
+}
